@@ -52,11 +52,14 @@ form {
 /* 
    text styles 
 */
-.title                          /* album titles on main page */
-	{ 
-	  font-size: 14px; 
-	  font-weight: bold; 
-	}
+
+/* album titles on main page */
+.title { 
+    font-size: 14px; 
+    font-weight: bold; 
+    white-space: nowrap;
+}
+
 .mod_title			/* album title -- Text is controlled by .title */
 	{
 	  border:1px solid #000000;
@@ -153,11 +156,13 @@ a.error:hover {
 	{
 	}
 
-.head                           /* page headers */
-	{ 
-	  font-size: 16px; 
-	  font-weight: bold; 
-	}
+/* Page headers */
+.head { 
+    font-size: 16px; 
+    font-weight: bold; 
+    white-space: nowrap;
+}
+
 .mod_headliner  /* Gallery & Album titles. Text is controlled by .head */
 	{
 	}
@@ -268,11 +273,13 @@ a.error:hover {
 	  font-size: 10px; 
 	  font-weight: bold; 
 	}
+
 .search                          /* used in search text */
 	{ 
 	  font-size: 10px; 
 	  font-weight: bold; 
 	}
+
 .searchform /* defines form for search */
 	{
 	  font-size: 10px; 
