@@ -29,11 +29,8 @@ if (!includeTemplate('album.header.tpl')) {
             <table cellspacing="0" cellpadding="0" class="mod_toplight_bg">
               <tr>
                 <td class="mod_toplight_left" align="right"></td>
-                <td nowrap class="head" align="left">
-		  &nbsp;<?php echo $gallery->album->fields["title"] ?>&nbsp;
-                </td>
-                <td class="mod_toplight_right" align="left">
-                </td>
+                <td class="head" align="left">&nbsp;<?php echo $gallery->album->fields["title"] ?>&nbsp;</td>
+                <td class="mod_toplight_right" align="left"></td>
               </tr>
             </table>
           </td>
