@@ -27,9 +27,9 @@ if(!includeTemplate('slideshow.header.tpl')) {
 		<td>
 		<table cellspacing="0" cellpadding="0" class="mod_toplight_bg">
 		<tr>
-                	<td class="mod_toplight_left" align="right"></td>
-			<td nowrap class="head" align="left">&nbsp;<?php echo $title ?>&nbsp;</td>
-                	<td class="mod_toplight_right" align="left"></td>
+            <td class="mod_toplight_left" align="right"></td>
+			<td class="head" align="left">&nbsp;<?php echo $title ?>&nbsp;</td>
+            <td class="mod_toplight_right" align="left"></td>
 		</tr>
 		</table>
 		</td>
